--- a/src/styles/utilities/_display.scss
+++ b/src/styles/utilities/_display.scss
@@ -17,8 +17,14 @@
 %inline-flex {
   display: inline-flex;
 }
+%list-item {
+  display: list-item;
+}
 %table {
   display: table;
+}
+%inline-table {
+  display: inline-table;
 }
 %table-row {
   display: table-row;
@@ -26,6 +32,18 @@
 %table-cell {
   display: table-cell;
 }
+%table-caption {
+  display: table-caption;
+}
 %hidden {
   display: none;
+}
+%grid {
+  display: grid;
+}
+%inline-grid {
+  display: inline-grid;
+}
+%compact {
+  display: compact;
 }
