--- a/src/styles/utilities/_font-weight.scss
+++ b/src/styles/utilities/_font-weight.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   #HIDE
+   #FONT WEIGHT
    ========================================================================== */
 
 %font-hairline {
