project scaffold reworked

--- a/src/styles/generic/_normalize.scss
+++ b/src/styles/generic/_normalize.scss
@@ -2,4 +2,4 @@
    #NORMALIZE
    ========================================================================== */
 
-@import 'normalize-scss/sass/normalize/import-now';
+@import '../../../node_modules/normalize-scss/sass/normalize/import-now'
