--- a/src/styles/utilities/_helpers.scss
+++ b/src/styles/utilities/_helpers.scss
@@ -51,3 +51,12 @@
 %select-auto {
   user-select: auto;
 }
+%border-box {
+  box-sizing: border-box;
+}
+%content-box {
+  box-sizing: content-box;
+}
+%padding-box {
+  box-sizing: padding-box;
+}
