--- a/src/styles/utilities/_floats.scss
+++ b/src/styles/utilities/_floats.scss
@@ -14,10 +14,10 @@
 %clear-both {
   clear: both;
 }
-%clear-both {
+%clear-left {
   clear: left;
 }
-%clear-both {
+%clear-right {
   clear: right;
 }
 %clear-none {
