--- a/src/styles/components/_btn.scss
+++ b/src/styles/components/_btn.scss
@@ -2,27 +2,13 @@
    #BUTTONS
    ========================================================================== */
 
-/**
- * This is an example component. Extend inuitcss by building your own components
- * that make up your UI. Component classes are prefixed with a `c-`.
- */
-
-/**
- * 1. Allow us to style box model properties.
- * 2. Line different sized buttons up a little nicer.
- * 3. Make buttons inherit font styles (often necessary when styling `input`s as
- *    buttons).
- * 4. Reset/normalize some styles.
- * 5. Force all button-styled elements to appear clickable.
- */
-
 .c-btn {
-  display: inline-block; /* [1] */
-  vertical-align: middle; /* [2] */
-  font: inherit; /* [3] */
-  text-align: center; /* [4] */
-  margin: 0; /* [4] */
-  cursor: pointer; /* [5] */
+  @extend %inline-block;
+  @extend %align-middle;
+  font: inherit;
+  @extend %text-center;
+  margin: 0;
+  @extend %cursor-pointer;
   padding: 0.5rem 1rem;
   transition: $global-transition;
   border-radius: $global-radius;
@@ -38,7 +24,7 @@
   &:hover,
   &:active,
   &:focus {
-    text-decoration: none; /* [4] */
+    @extend %no-underline;
     color: $color-white;
   }
 
