--- a/src/styles/elements/_lists.scss
+++ b/src/styles/elements/_lists.scss
@@ -7,14 +7,14 @@ li {
 
   > ul,
   > ol {
+    margin-top: 0.5rem;
     margin-bottom: 0;
     margin-left: 1rem;
-    margin-top: 0.5rem;
   }
 }
 
 dt {
-  font-weight: bold;
+  @extend %font-bold;
 }
 
 dd {
