--- a/src/styles/utilities/_GOEL.scss
+++ b/src/styles/utilities/_GOEL.scss
@@ -6,6 +6,7 @@
 @import 'list';
 @import 'overflow';
 @import 'position';
+@import 'table';
 @import 'text';
 @import 'vertical-align';
 @import 'visibility';
