variables changed - opacity

--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -69,3 +69,10 @@ $font-size-h4:              24px;
 $font-size-h5:              18px;
 $font-size-h6:              18px;
 
+/* ----- OPACITY --------- */
+
+$opacity-4: 1;
+$opacity-3: 0.75;
+$opacity-2: 0.50;
+$opacity-1: 0.25;
+$opacity-0: 0;
