--- a/src/styles/utilities/_GOEL.scss
+++ b/src/styles/utilities/_GOEL.scss
@@ -4,7 +4,8 @@
 @import 'font-weight';
 @import 'helpers';
 @import 'list';
-@import 'overflow';
+@import 'list';
+@import 'opacity';
 @import 'position';
 @import 'table';
 @import 'text';
