--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -9,14 +9,17 @@ $mobile:     'min-width: 480px';
 /* ----------- GLOBAL ------------- */
 
 $transitions: all 0.3s ease-in-out;
+
 $padding-lg:   60px;
 $padding-md:   40px;
 $padding-base: 30px;
 $padding-sm:   15px;
 
-$border-radius-large: 6px;
+$border-radius-lg:    6px;
 $border-radius-base:  4px;
-$border-radius-small: 3px;
+$border-radius-sm:    3px;
+$border-radius-sm:    2px;
+$border-radius-xs:    1px;
 
 /* ----------- COLORS ------------- */
 
@@ -54,20 +57,11 @@ $line-height-base:          1.5;
 $font-first: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-second: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-
-$font-size-lg:              18px;
-$font-size-base:            16px;
-$font-size-md:              16px;
-$font-size-sm:              14px;
-$font-size-xs:              12px;
-
-
-$font-size-h1:              36px;
-$font-size-h2:              32px;
-$font-size-h3:              32px;
-$font-size-h4:              24px;
-$font-size-h5:              18px;
-$font-size-h6:              18px;
+$font-size-lg:              32px;
+$font-size-md:              24px;
+$font-size-base:            18px;
+$font-size-sm:              16px;
+$font-size-xs:              14px;
 
 /* ----- OPACITY --------- */
 
