changes in comments

--- a/GOEL/_border.scss
+++ b/GOEL/_border.scss
@@ -1,3 +1,7 @@
+/* ==========================================================================
+   #BORDER
+   ========================================================================== */
+
 %rounded-none {
   border-radius: 0;
 }
