--- a/GOEL/_opacity.scss
+++ b/GOEL/_opacity.scss
@@ -1,3 +1,7 @@
+/* ==========================================================================
+   #OPACITY
+   ========================================================================== */
+
 %opacity-4 {
   opacity: $opacity-4;
 }
