--- a/GOEL/_visibility.scss
+++ b/GOEL/_visibility.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   #HIDE
+   #VISIBILITY
    ========================================================================== */
 
 %visible {
