--- a/src/styles/utilities/_border.scss
+++ b/src/styles/utilities/_border.scss
@@ -1,3 +1,7 @@
+/* ==========================================================================
+   #BORDER
+   ========================================================================== */
+
 %rounded-none {
   border-radius: 0;
 }
