--- a/src/styles/utilities/_visibility.scss
+++ b/src/styles/utilities/_visibility.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   #HIDE
+   #VISIBILITY
    ========================================================================== */
 
 %visible {
