variables bug fiexed

--- a/src/styles/utilities/_border.scss
+++ b/src/styles/utilities/_border.scss
@@ -1,6 +1,7 @@
 /* ==========================================================================
    #BORDER
    ========================================================================== */
+@import 'variables';
 
 %rounded-none {
   border-radius: 0;
