--- a/GOEL/_variables.scss
+++ b/GOEL/_variables.scss
@@ -15,7 +15,7 @@ $margin-sm:   15px;
 
 $border-radius-lg:    6px;
 $border-radius-base:  4px;
-$border-radius-sm:    3px;
+$border-radius-md:    3px;
 $border-radius-sm:    2px;
 $border-radius-xs:    1px;
 
